@@ -1,6 +1,6 @@
-<!ENTITY gst-version-stable "0.8.10">
+<!ENTITY gst-version-stable "0.8.11">
 <!ENTITY gst-version-devel "0.7.6">
-<!ENTITY gst-plugins-version-stable "0.8.8">
+<!ENTITY gst-plugins-version-stable "0.8.11">
 <!ENTITY gst-plugins-version-devel "0.7.6">
 <!ENTITY gst-bug-report "http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer">
 <!ENTITY gst-cvs-http "http://cvs.freedesktop.org/gstreamer/">
