@@ -1,0 +1,320 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins</module>
+  <module-fancy>GStreamer Plugins</module-fancy>
+  <name>... And Thanks For All The Fix</name>
+  <version>0.8.11</version>
+
+  <intro>
+<p>
+The GStreamer team is happy to announce a new release
+in the 0.8.x stable series of the GStreamer Plugins.
+</p>
+<p>
+The 0.8.x series is a stable series aimed at end users.
+It is not API or ABI compatible with the stable 0.6.x series.
+It is, however, parallel installable with the 0.6.x series.
+</p>
+<p>
+This module contains plugins providing media encoding and decoding,
+conversion, effects, and other elements that provide actual media
+handling functionality to the core.  You need the GStreamer core module
+to make them work.  The versions do not need to match exactly, as long
+as all of them are in the 0.8.x series.
+</p>
+<p>
+The FFmpeg-based decoder element has been moved to its own module.  If you
+want support for a lot of popular video formats, you need to install this
+module along with the GStreamer Core and Plugins.  An FFmpeg-based colorspace
+element has been added to the Plugins however.
+</p>
+<p>
+A special "thank you" to Ronald Bultje, who has done most of the work on 0.8
+in the past year.  We wish him luck on his new adventure in NYC.  So long !
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.6.x series</feature>
+    <feature>Internationalization</feature>
+
+    <feature>Translations: af az ca cs en_GB fr hu it nb nl or sq sr sv uk vi</feature>
+
+    <feature>new element: dvdsubdec</feature>
+    <feature>new element: imagemixer</feature>
+    <feature>new element: textrender</feature>
+    <feature>new element: x264enc</feature>
+    <feature>new element: oggparse</feature>
+    <feature>important fixes for esound synchronisation</feature>
+  </features>
+
+  <applications>
+<p>
+The GConf settings have moved to a versioned location and can now be found
+under /system/gstreamer/0.8.  Applications should use the gconf library,
+as provided by gstreamer-gconf-0.8.pc, to access the default settings.
+</p>
+  </applications>
+  <contributors>
+<!--
+<person>Ali Akcaagac</person>
+<person>Amaury Jacquot</person>
+<person>Antoine Tremblay</person>
+<person>Archana Shah</person>
+<person>Balamurali Viswanathan</person>
+<person>Benoit Amiaux</person>
+<person>Brian Cameron</person>
+<person>Chris Lee</person>
+<person>Christian Schaller</person>
+<person>Christophe Fergeau</person>
+<person>Clytie Siddall</person>
+<person>David Moore</person>
+<person>Edward Hervey</person>
+<person>Francis Labonte</person>
+<person>Gergely Nagy</person>
+<person>Gora Mohanty</person>
+<person>Iain Holmes</person>
+<person>James Bowes</person>
+<person>James Henstridge</person>
+<person>James Morrison</person>
+<person>Jan de Groot</person>
+<person>Jeffrey Ollie</person>
+<person>Jeroen Zwartepoorte</person>
+<person>Johan Dahlin</person>
+<person>Julien Moutte</person>
+<person>Kjartan Maraas</person>
+<person>Koop Mast</person>
+<person>Luca Ferretti</person>
+<person>Lutz Mueller</person>
+<person>Maciej Katafiasz</person>
+<person>Martin Eikermann</person>
+<person>Martin Holters</person>
+<person>Martin Pitt</person>
+<person>Martin Soto</person>
+<person>Milosz Derezynski</person>
+<person>Nathan Robertson</person>
+<person>Nickolay V. Shmyrev</person>
+<person>Paul Jack</person>
+<person>Phil Blundell</person>
+<person>Richard Hult</person>
+<person>Scott Wheeler</person>
+<person>Sebastien Cote</person>
+<person>Stephane Loeuillet</person>
+<person>Steve Baker</person>
+<person>Takao Fujiwara</person>
+<person>Thomas Klausner</person>
+<person>Till Busch</person>
+<person>Toni Willberg</person>
+<person>William Jon McCann</person>
+<person>Wim Taymans</person>
+-->
+
+	<person>Akos Maroy</person>
+	<person>Andy Wingo</person>
+	<person>Arwed v. Merkatz</person>
+	<person>Chris Ouch</person>
+	<person>Benjamin Otte</person>
+	<person>David Schleef</person>
+	<person>Dominique Würtz</person>
+	<person>Jan Schmidt</person>
+	<person>Jonathan Matthew</person>
+	<person>Josef Zlomek</person>
+	<person>Luca Ognibene</person>
+	<person>Madhan Raj M</person>
+	<person>Michael Benes</person>
+	<person>Michael Smith</person>
+	<person>Paolo Borelli</person>
+	<person>Ronald Bultje</person>
+	<person>Ross Burton</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Thomas Zajic</person>
+	<person>Stefan Kost</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Wouter Paesen</person>
+	<person>Zaheer Abbas Merali</person>
+  </contributors>
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  <bugs>
+    <bug>
+      <id>166528</id>
+      <summary>[playbin] hang playing dvdnav:// location</summary>
+    </bug>
+    <bug>
+      <id>166783</id>
+      <summary>[PATCH] New plugin: imagemixer</summary>
+    </bug>
+    <bug>
+      <id>167122</id>
+      <summary>seeking DVD stops playback</summary>
+    </bug>
+    <bug>
+      <id>171563</id>
+      <summary>Vorbis support for Matroska muxer</summary>
+    </bug>
+    <bug>
+      <id>301312</id>
+      <summary>dvdsubdec element</summary>
+    </bug>
+    <bug>
+      <id>305754</id>
+      <summary>[PATCH] Internal GStreamer error: pad problem.</summary>
+    </bug>
+    <bug>
+      <id>306555</id>
+      <summary>chain-based text rendering element</summary>
+    </bug>
+    <bug>
+      <id>307326</id>
+      <summary>esdsink makes video choppy totem</summary>
+    </bug>
+    <bug>
+      <id>307361</id>
+      <summary>please expose shoutcast stream metadata through playbin</summary>
+    </bug>
+    <bug>
+      <id>308040</id>
+      <summary>gstadder: using adder with float audio results in corrupt...</summary>
+    </bug>
+    <bug>
+      <id>308484</id>
+      <summary>Totem gives error when seeking back to beginning of Ogg T...</summary>
+    </bug>
+    <bug>
+      <id>308633</id>
+      <summary>Matroska muxer always fails</summary>
+    </bug>
+    <bug>
+      <id>308638</id>
+      <summary>ffmpegcolorspace does not handle bgra32 correctly</summary>
+    </bug>
+    <bug>
+      <id>308772</id>
+      <summary>mad timestamp inconsistency</summary>
+    </bug>
+    <bug>
+      <id>308980</id>
+      <summary>gst-typefind incorrectly identifies m4a files encoded wit...</summary>
+    </bug>
+    <bug>
+      <id>309087</id>
+      <summary>artsdsink registers conflicting property &quot; name &quot; which cau...</summary>
+    </bug>
+    <bug>
+      <id>309150</id>
+      <summary>[xvimagesink/ximagesink] Incremenet framerate properties</summary>
+    </bug>
+    <bug>
+      <id>309179</id>
+      <summary>videomixer does not love static images and eos</summary>
+    </bug>
+    <bug>
+      <id>309218</id>
+      <summary>adder element does not supply duration values to data it ...</summary>
+    </bug>
+    <bug>
+      <id>309325</id>
+      <summary>Matroska: incorrect element size</summary>
+    </bug>
+    <bug>
+      <id>309354</id>
+      <summary>timestamp inconsitency in audioscale</summary>
+    </bug>
+    <bug>
+      <id>309375</id>
+      <summary>cdparanoia can't extract last track</summary>
+    </bug>
+    <bug>
+      <id>309503</id>
+      <summary>gst-plugins: xine wrapper compile problem with xine-lib-1...</summary>
+    </bug>
+    <bug>
+      <id>309524</id>
+      <summary>no debug category for gnome-vfs elements</summary>
+    </bug>
+    <bug>
+      <id>309532</id>
+      <summary>Matroska: Invalid free()</summary>
+    </bug>
+    <bug>
+      <id>309834</id>
+      <summary>Totem crashes when trying to Play Disc 'cdrecorder'</summary>
+    </bug>
+    <bug>
+      <id>310020</id>
+      <summary>Totem segfaults due to bad location</summary>
+    </bug>
+    <bug>
+      <id>310335</id>
+      <summary>[decodebin] problems with audio streams in a mkv</summary>
+    </bug>
+    <bug>
+      <id>310597</id>
+      <summary>gsttextrender cuts of pixels at the right and bottom of s...</summary>
+    </bug>
+    <bug>
+      <id>311006</id>
+      <summary>[spectrum] handle mono streams</summary>
+    </bug>
+    <bug>
+      <id>311070</id>
+      <summary>wavparse returns caps not in template</summary>
+    </bug>
+    <bug>
+      <id>311162</id>
+      <summary>[flacdec] doesn't handle 24-bit files</summary>
+    </bug>
+    <bug>
+      <id>311401</id>
+      <summary>alpha capsnego broken</summary>
+    </bug>
+    <bug>
+      <id>311487</id>
+      <summary>configure doesn't check for libGLU?</summary>
+    </bug>
+    <bug>
+      <id>311491</id>
+      <summary>ogg muxer can get pages out of order (patch)</summary>
+    </bug>
+    <bug>
+      <id>311583</id>
+      <summary>Skips when playing CD</summary>
+    </bug>
+    <bug>
+      <id>311600</id>
+      <summary>Add MPEG-2 support to mpeg1videoparse</summary>
+    </bug>
+    <bug>
+      <id>311662</id>
+      <summary> &quot; uninitialized value &quot; warning causes build to fail</summary>
+    </bug>
+    <bug>
+      <id>312121</id>
+      <summary>[modplug] crashes on query before song fully loaded</summary>
+    </bug>
+    <bug>
+      <id>312272</id>
+      <summary>Musicbrainz tags not registered for FLAC encoder</summary>
+    </bug>
+    <bug>
+      <id>313084</id>
+      <summary>Eats memory decoding mp3</summary>
+    </bug>
+    <bug>
+      <id>313374</id>
+      <summary>Crashes in libgstcdparanoia when missing device permissions</summary>
+    </bug>
+    <bug>
+      <id>313600</id>
+      <summary>recent change to esdsink in the 0.8.x branch breaks playback</summary>
+    </bug>
+  </bugs>
+</release>
